--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li>Marko Markovic</li>
         <li>Aleksandar Trivic</li>
+        <li>Janko Jankovic</li>
     </ul>
 </body>
 </html>
