--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ovo je naslov dokumenta iz master grane</title>
 </head>
 <body>
-    <p>Testni paragraf</p>
+    <p>Testni paragraf iz master grane</p>
     <ul>
         <li>Marko Markovic</li>
         <li>Aleksandar Trivic</li>
