Dodavnje Tanje u projekat

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Marko Markovic</li>
         <li>Aleksandar Trivic</li>
         <li>Janko Jankovic</li>
+        <li>Tanja</li>
     </ul>
 </body>
 </html>
