--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li>Janko Jankovic</li>
         <li>Tanja</li>
         <li>Ana Marija</li>
+        <li>Stevan Mirkovic</li>
     </ul>
 </body>
 </html>
