--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li>Tanja</li>
         <li>Ana Marija</li>
         <li>Stevan Mirkovic</li>
+        <li>Mirko Kekic</li>
     </ul>
 </body>
 </html>
